--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -345,6 +345,18 @@
     -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
 }
 
+#phoneicon {
+    -fx-image: url("../images/ic_phone_black_24dp.png");
+}
+
+#addressicon {
+    -fx-image: url("../images/ic_home_black_24dp.png");
+}
+
+#emailicon {
+    -fx-image: url("../images/ic_email_black_24dp.png");
+}
+
 #resultDisplay .content {
     -fx-background-color: transparent, -fx-base-background-color-1, transparent, -fx-base-background-color-1;
     -fx-background-radius: 0;
