--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -28,7 +28,7 @@
       <padding>
         <Insets bottom="10" left="10" right="10" top="10" />
       </padding>
-        <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
+        <StackPane fx:id="peopleCountPlaceholder" VBox.vgrow="NEVER" />
       <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS" />
     </VBox>
       <VBox prefHeight="200.0" prefWidth="100.0">
