--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -12,22 +12,23 @@
 
 <VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
-        <URL value="@Extensions.css" />
+        <URL value="@Extensions.css"/>
     </stylesheets>
     <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
         <Menu mnemonicParsing="false" text="File">
-         <MenuItem fx:id="userProfileMenuItem" mnemonicParsing="false" onAction="#handleUserProfile" text="UserProfile" />
-            <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
+            <MenuItem fx:id="userProfileMenuItem" mnemonicParsing="false" onAction="#handleUserProfile"
+                      text="UserProfile"/>
+            <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit"/>
         </Menu>
         <Menu mnemonicParsing="false" text="Help">
-            <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
+            <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help"/>
         </Menu>
         <!--@@author zhoukai07-->
         <Menu mnemonicParsing="false" text="Theme">
-            <MenuItem mnemonicParsing="false" onAction="#handleDarkTheme" text="Dark Theme" />
-            <MenuItem mnemonicParsing="false" onAction="#handleDarkTheme2" text="Dark Theme 2" />
-            <MenuItem mnemonicParsing="false" onAction="#handleLightTheme" text="Light Theme" />
-            <MenuItem mnemonicParsing="false" onAction="#handleLightTheme2" text="Light Theme 2" />
+            <MenuItem mnemonicParsing="false" onAction="#handleDarkTheme" text="Dark Theme"/>
+            <MenuItem mnemonicParsing="false" onAction="#handleDarkTheme2" text="Dark Theme 2"/>
+            <MenuItem mnemonicParsing="false" onAction="#handleLightTheme" text="Light Theme"/>
+            <MenuItem mnemonicParsing="false" onAction="#handleLightTheme2" text="Light Theme 2"/>
         </Menu>
         <!--@@author-->
     </MenuBar>
@@ -36,69 +37,78 @@
     <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.4" VBox.vgrow="ALWAYS">
         <VBox fx:id="personList" maxWidth="400.0" minWidth="340" prefWidth="340" SplitPane.resizableWithParent="false">
             <padding>
-                <Insets bottom="10" left="10" right="10" top="10" />
+                <Insets bottom="10" left="10" right="10" top="10"/>
             </padding>
-            <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS" />
+            <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
         </VBox>
-        <SplitPane fx:id="rightViewSplitPane" dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
+        <SplitPane fx:id="rightViewSplitPane" dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0"
+                   prefWidth="160.0">
             <items>
                 <AnchorPane maxHeight="150.0" minHeight="150.0" minWidth="0.0" prefHeight="150.0" prefWidth="160.0">
-               <SplitPane dividerPositions="0.5" layoutX="5.0" layoutY="5.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
-                  <items>
-                     <StackPane fx:id="detailedPersonCardPlaceholder">
-                        <padding>
-                           <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                        </padding>
-                     </StackPane>
-                          <StackPane fx:id="websiteButtonbarPlaceholder">
-                              <padding>
-                                  <Insets bottom="10" left="10" right="10" top="10" />
-                              </padding>
-                          </StackPane>
-                  </items>
-               </SplitPane>
+                    <SplitPane dividerPositions="0.5" layoutX="5.0" layoutY="5.0" AnchorPane.bottomAnchor="5.0"
+                               AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+                        <items>
+                            <StackPane fx:id="detailedPersonCardPlaceholder">
+                                <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                                </padding>
+                            </StackPane>
+                            <StackPane fx:id="websiteButtonbarPlaceholder">
+                                <padding>
+                                    <Insets bottom="10" left="10" right="10" top="10"/>
+                                </padding>
+                            </StackPane>
+                        </items>
+                    </SplitPane>
                 </AnchorPane>
-            <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
-              <items>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="160.0">
-                          <children>
-      
-                                    <StackPane fx:id="browserPlaceholder" prefHeight="163.0" prefWidth="199.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
-                                  <padding>
-                                      <Insets bottom="10" left="10" right="10" top="10" />
-                                  </padding>
-                              </StackPane>
-                          </children>
-                      </AnchorPane>
-                  <SplitPane dividerPositions="0.5" maxHeight="170.0" orientation="VERTICAL">
+                <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
                     <items>
-                      <AnchorPane maxHeight="100.0">
-                           <children>
-                           
-                                     <StackPane fx:id="resultDisplayPlaceholder" maxHeight="100" minHeight="100" prefHeight="100" styleClass="pane-with-border" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                   <padding>
-                                       <Insets bottom="5" left="10" right="10" top="5" />
-                                   </padding>
-                               </StackPane>
-                           </children>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="160.0">
+                            <children>
+
+                                <StackPane fx:id="browserPlaceholder" prefHeight="163.0" prefWidth="199.0"
+                                           AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0"
+                                           AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+                                    <padding>
+                                        <Insets bottom="10" left="10" right="10" top="10"/>
+                                    </padding>
+                                </StackPane>
+                            </children>
                         </AnchorPane>
-                      <AnchorPane maxHeight="70.0">
-                           <children>
-                           
-                                     <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                   <padding>
-                                       <Insets bottom="5" left="10" right="10" top="5" />
-                                   </padding>
-                               </StackPane>
-                           </children>
-                        </AnchorPane>
+                        <SplitPane dividerPositions="0.5" maxHeight="170.0" orientation="VERTICAL">
+                            <items>
+                                <AnchorPane maxHeight="100.0">
+                                    <children>
+
+                                        <StackPane fx:id="resultDisplayPlaceholder" maxHeight="100" minHeight="100"
+                                                   prefHeight="100" styleClass="pane-with-border"
+                                                   AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                            <padding>
+                                                <Insets bottom="5" left="10" right="10" top="5"/>
+                                            </padding>
+                                        </StackPane>
+                                    </children>
+                                </AnchorPane>
+                                <AnchorPane maxHeight="70.0">
+                                    <children>
+
+                                        <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border"
+                                                   AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                            <padding>
+                                                <Insets bottom="5" left="10" right="10" top="5"/>
+                                            </padding>
+                                        </StackPane>
+                                    </children>
+                                </AnchorPane>
+                            </items>
+                        </SplitPane>
                     </items>
-                  </SplitPane>
-              </items>
-            </SplitPane>
+                </SplitPane>
             </items>
         </SplitPane>
     </SplitPane>
 
-    <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
+    <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER"/>
 </VBox>
