--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
@@ -9,14 +11,13 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
   <GridPane HBox.hgrow="ALWAYS">
     <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
     </columnConstraints>
-    <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
+    <VBox alignment="CENTER_LEFT" minHeight="80" minWidth="150" prefWidth="200" GridPane.columnIndex="0">
       <padding>
         <Insets bottom="5" left="15" right="5" top="5" />
       </padding>
@@ -27,19 +28,33 @@
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="name" styleClass="cell_big_label" text="\$first" />
+        <Label fx:id="name" styleClass="cell_big_label" text="\$first">
+               <graphic>
+                  <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                       <Image url="@../../../../docs/images/icons/name(white).png" />
+                    </image>
+                  </ImageView>
+               </graphic>
+        </Label>
         <Label fx:id="favourite" alignment="TOP_RIGHT" />
+          <padding>
+              <Insets bottom="5.5" />
+          </padding>
       </HBox>
       <FlowPane fx:id="tags" />
-         <HBox fx:id="cardPane2" alignment="CENTER_LEFT">
-            <children>
-            <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
-
-            <Label fx:id="birthday" styleClass="cell_text_label" alignment="CENTER_LEFT" text="birthday: " />
-            </children>
-         </HBox>
-      <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
-      <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
+      <Label fx:id="phone" styleClass="cell_small_label" text="\$phone">
+          <padding>
+              <Insets top="5.5" />
+          </padding>
+            <graphic>
+                <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../../../../docs/images/icons/phone(white).png" />
+                    </image>
+                </ImageView>
+            </graphic>
+      </Label>
     </VBox>
       <rowConstraints>
          <RowConstraints />
