--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -1,3 +1,4 @@
+/*@@author cctdaniel*/
 .background {
     -fx-background-color: yellow;
     background-color: yellow; /* Used in the default.html file */
