--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
   <stylesheets>
     <URL value="@BlueTheme.css" />
     <URL value="@Extensions.css" />
@@ -37,11 +37,11 @@
   </StackPane>
 
   <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.4, 0.5" VBox.vgrow="ALWAYS">
-    <VBox fx:id="personList" minWidth="340" prefWidth="340" SplitPane.resizableWithParent="false">
+    <VBox fx:id="personList" minWidth="150.0" prefHeight="169.0" prefWidth="150.0" SplitPane.resizableWithParent="false">
       <padding>
         <Insets bottom="10" left="10" right="10" top="10" />
       </padding>
-      <StackPane fx:id="personAndTagListPanelPlaceholder" VBox.vgrow="ALWAYS" />
+      <StackPane fx:id="personAndTagListPanelPlaceholder" prefHeight="180.0" prefWidth="425.0" VBox.vgrow="ALWAYS" />
     </VBox>
 
     <StackPane fx:id="browserPlaceholder" prefWidth="340.0">
