--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -8,10 +8,11 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1">
 
   <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
     <Menu mnemonicParsing="false" text="File">
+         <MenuItem mnemonicParsing="false" onAction="#handleNew" text="New" />
       <MenuItem mnemonicParsing="false" onAction="#handleOpen" text="Open" />
          <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
     </Menu>
