--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
   <stylesheets>
     <URL value="@BlueTheme.css" />
     <URL value="@Extensions.css" />
@@ -41,7 +41,7 @@
       <padding>
         <Insets bottom="10" left="10" right="10" top="10" />
       </padding>
-      <StackPane fx:id="personAndTagListPanelPlaceholder" prefHeight="180.0" prefWidth="425.0" VBox.vgrow="ALWAYS" />
+      <StackPane fx:id="personAndTagListPanelPlaceholder" minWidth="150.0" prefHeight="180.0" prefWidth="150.0" VBox.vgrow="ALWAYS" />
     </VBox>
 
     <StackPane fx:id="browserPlaceholder" prefWidth="340.0">
@@ -50,16 +50,13 @@
       </padding>
     </StackPane>
       <SplitPane dividerPositions="0.5" maxWidth="400.0" minWidth="0.0" orientation="VERTICAL" prefHeight="200.0" prefWidth="400.0">
-        <items>
           <!-- @@author limyongsong -->
+            <padding>
+              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            </padding>
             <StackPane fx:id="remarkListDisplayPlaceholder" maxHeight="200.0" maxWidth="380.0" minHeight="0.0" prefHeight="100.0" prefWidth="380.0" />
-            <StackPane fx:id="remarkDisplayPlaceholder" maxWidth="400" minHeight="40.0" prefHeight="300.0" prefWidth="400.0">
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </StackPane>
+            <StackPane fx:id="remarkDisplayPlaceholder" maxWidth="400" minHeight="40.0" prefHeight="300.0" prefWidth="400.0" />
           <!-- @@author -->
-        </items>
       </SplitPane>
   </SplitPane>
 
