--- a/src/main/resources/view/WelcomeScreen.fxml
+++ b/src/main/resources/view/WelcomeScreen.fxml
@@ -12,4 +12,14 @@
     <padding>
         <Insets bottom="10.0" left="10.0" right ="10.0" top="10.0"/>
     </padding>
+    <StackPane fx:id="logoPlaceHolder" styleClass="pane-with-border" VBox.vgrow="NEVER">
+        <padding>
+            <Insets bottom="5" left="10" right="10" top="5" />
+        </padding>
+    </StackPane>
+    <StackPane fx:id="buttonPlaceHolder" styleClass="pane-with-border" VBox.vgrow="NEVER">
+        <padding>
+            <Insets bottom="5" left="10" right="10" top="5" />
+        </padding>
+    </StackPane>
 </VBox>
