change location of icon images stored in UniCity and edit images tag in PersonDisplay and PersonListCard accordingly

--- a/src/main/resources/view/ExtendedPersonDisplay.fxml
+++ b/src/main/resources/view/ExtendedPersonDisplay.fxml
@@ -14,7 +14,7 @@
         <graphic>
             <ImageView fitHeight="20.0" fitWidth="20.0">
                 <image>
-                    <Image url="@../../../../docs/images/icons/name(white).png" />
+                    <Image url="@../images/name(white).png" />
                 </image>
             </ImageView>
         </graphic>
@@ -26,7 +26,7 @@
       <graphic>
               <ImageView fitHeight="20.0" fitWidth="20.0">
                   <image>
-                      <Image url="@../../../../docs/images/icons/phone(white).png" />
+                      <Image url="@../images/phone(white).png" />
                   </image>
               </ImageView>
       </graphic>
@@ -38,7 +38,7 @@
       <graphic>
               <ImageView fitHeight="20.0" fitWidth="20.0">
                   <image>
-                      <Image url="@../../../../docs/images/icons/email(white).png" />
+                      <Image url="@../images/email(white).png" />
                   </image>
               </ImageView>
       </graphic>
@@ -50,7 +50,7 @@
       <graphic>
               <ImageView fitHeight="20.0" fitWidth="20.0">
                   <image>
-                      <Image url="@../../../../docs/images/icons/address(white).png" />
+                      <Image url="@../images/address(white).png" />
                   </image>
               </ImageView>
       </graphic>
@@ -62,7 +62,7 @@
       <graphic>
               <ImageView fitHeight="20.0" fitWidth="20.0">
                   <image>
-                      <Image url="@../../../../docs/images/icons/birthday(white).png" />
+                      <Image url="@../images/birthday(white).png" />
                   </image>
               </ImageView>
       </graphic>
