--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -32,7 +32,7 @@
                <graphic>
                   <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                       <Image url="@../../../../docs/images/icons/name(white).png" />
+                       <Image url="@../images/name(white).png" />
                     </image>
                   </ImageView>
                </graphic>
@@ -50,7 +50,7 @@
             <graphic>
                 <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../../../../docs/images/icons/phone(white).png" />
+                        <Image url="@../images/phone(white).png" />
                     </image>
                 </ImageView>
             </graphic>
