--- a/src/main/resources/view/Browser.fxml
+++ b/src/main/resources/view/Browser.fxml
@@ -4,8 +4,6 @@
 <?import javafx.scene.web.WebView?>
 
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <WebView fx:id="browser" />
-   </children>
+<StackPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+   <WebView fx:id="browser" />
 </StackPane>
