--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -11,14 +11,14 @@
     -fx-text-fill: #ffffff;
     -fx-opacity: 0.9;
 }
-
+/* @@author Melvin-leo */
 .label-warning {
     -fx-font-size: 30pt;
     -fx-font-family: "Segoe UI Semibold";
     -fx-text-fill: white;
     -fx-opacity: 0.9;
 }
-
+/* @@author nelsonqyj */
 .label-bright {
     -fx-font-size: 11pt;
     -fx-font-family: "Segoe UI Semibold";
