--- a/src/main/resources/view/TimetableListPanel.fxml
+++ b/src/main/resources/view/TimetableListPanel.fxml
@@ -5,5 +5,5 @@
 
 <!-- @@author reginleiff -->
 <HBox HBox.hgrow="ALWAYS" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
-    <ListView fx:id="scheduleListView" mouseTransparent="true" prefHeight="60.0" stylesheets="@BrightTheme.css" HBox.hgrow="ALWAYS" />
+    <ListView fx:id="timetableListView" mouseTransparent="true" prefHeight="60.0" stylesheets="@BrightTheme.css" HBox.hgrow="ALWAYS" />
 </HBox>
