--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -35,29 +35,48 @@
     </padding>
   </StackPane>
 
-  <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.3, 0.5" VBox.vgrow="ALWAYS">
-    <VBox fx:id="personList" minWidth="270" prefWidth="340" SplitPane.resizableWithParent="false">
-      <padding>
-        <Insets bottom="10" left="10" right="10" top="10" />
-      </padding>
-      <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS" />
-    </VBox>
-      <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
+  <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.3, 0.5" prefWidth="908.0" VBox.vgrow="ALWAYS">
+      <StackPane fx:id="personAndEventListPlaceholder" maxWidth="270.0" minWidth="270.0" prefWidth="270.0">
+         <children>
+            <VBox fx:id="personList" minWidth="270" prefWidth="340">
+               <padding>
+                  <Insets bottom="10" left="10" right="10" top="10" />
+               </padding>
+               <children>
+                  <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS" />
+               </children>
+            </VBox>
+            <VBox fx:id="eventList" minWidth="270.0" prefWidth="340.0">
+               <children>
+                  <StackPane fx:id="eventListPanelPlaceholder" VBox.vgrow="ALWAYS" />
+               </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </VBox>
+         </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </StackPane>
+      <SplitPane dividerPositions="0.5" minWidth="150.0" orientation="VERTICAL" prefHeight="200.0" prefWidth="250.0">
         <items>
-          <StackPane fx:id="detailsPanelPlaceholder" prefHeight="75.0" prefWidth="30.0">
+          <StackPane fx:id="detailsPanelPlaceholder" prefHeight="75.0" prefWidth="150.0">
             <padding>
               <Insets bottom="10" left="10" right="10" top="10" />
             </padding>
           </StackPane>
-            <StackPane fx:id="calendarPanel" prefHeight="75.0" prefWidth="30.0">
-                <padding>
-                    <Insets bottom="10" left="10" right="10" top="10" />
-                </padding>
-            </StackPane>
+          <StackPane fx:id="calendarPanel" prefHeight="75.0" prefWidth="150.0">
+          <padding>
+            <Insets bottom="10" left="10" right="10" top="10" />
+          </padding>
+        </StackPane>
         </items>
+         <padding>
+            <Insets bottom="10.0" top="10.0" />
+         </padding>
       </SplitPane>
-
-                  <StackPane fx:id="browserPlaceholder" prefHeight="150.0" prefWidth="340.0">
+      <StackPane fx:id="browserPlaceholder" minWidth="150.0" prefHeight="150.0" prefWidth="340.0">
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
