--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -408,4 +408,22 @@
 .opening-img {
     height: 584px;
 }
+
+.profile_big_label {
+    -fx-font-family: "Segoe UI Semibold";
+    -fx-font-size: 20px;
+    -fx-font-style: italic;
+    -fx-text-fill: white;
+}
+
+.profile_small_label {
+    -fx-font-family: "Segoe UI Semibold";
+    -fx-font-size: 16px;
+    -fx-text-fill: white;
+}
+
+.profile_small_text_area {
+    -fx-font-family: "Segoe UI Semibold";
+    -fx-font-size: 18px;
+}
 /* @@author */
