--- a/src/main/resources/view/StatusBarFooter.fxml
+++ b/src/main/resources/view/StatusBarFooter.fxml
@@ -5,16 +5,16 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import org.controlsfx.control.StatusBar?>
 
-<GridPane styleClass="grid-pane" stylesheets="@../css/DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="statusBarFooter" styleClass="grid-pane" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints />
   </columnConstraints>
-  <StatusBar fx:id="syncStatus" styleClass="anchor-pane" stylesheets="@../css/DarkTheme.css" />
-  <StatusBar fx:id="totalCount" nodeOrientation="LEFT_TO_RIGHT" styleClass="anchor-pane" stylesheets="@../css/DarkTheme.css" GridPane.columnIndex="1" />
-    <StatusBar fx:id="saveLocationStatus" nodeOrientation="RIGHT_TO_LEFT" styleClass="anchor-pane" stylesheets="@../css/DarkTheme.css" GridPane.columnIndex="2" />
+  <StatusBar fx:id="syncStatus" styleClass="anchor-pane"  />
+  <StatusBar fx:id="totalCount" nodeOrientation="LEFT_TO_RIGHT" styleClass="anchor-pane"  GridPane.columnIndex="1" />
+    <StatusBar fx:id="saveLocationStatus" nodeOrientation="RIGHT_TO_LEFT" styleClass="anchor-pane"  GridPane.columnIndex="2" />
    <rowConstraints>
       <RowConstraints />
    </rowConstraints>
