add border for eventListPanel for both BrightTheme and DarkTheme

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -385,6 +385,14 @@
     -fx-border-color: derive(#1d1d1d, 30%);
 }
 
+#eventListPanel {
+    -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
+}
+
+#eventListPanelPlaceholder {
+    -fx-border-color: derive(#1d1d1d, 30%);
+}
+
 #filterField, #personListPanel, #personWebpage {
     -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
 }
