--- a/src/main/resources/view/BrightTheme.css
+++ b/src/main/resources/view/BrightTheme.css
@@ -377,6 +377,14 @@
     -fx-border-color: #8b9dc3;
 }
 
+#eventListPanel {
+    -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
+}
+
+#eventListPanelPlaceholder {
+    -fx-border-color: #8b9dc3;
+}
+
 #filterField, #personListPanel, #personWebpage {
     -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
 }
