added in command mode status in Ui

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import java.net.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Menu?>
@@ -9,7 +14,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <stylesheets>
     <URL value="@DarkTheme.css" />
     <URL value="@Extensions.css" />
@@ -73,7 +78,12 @@
           </StackPane>
       </items>
      </SplitPane>
-
-     <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
+      <SplitPane dividerPositions="0.29797979797979796">
+        <items>
+      
+                 <StackPane fx:id="statusbarPlaceholder" />
+            <StackPane fx:id="commandModeStatusbarPlaceholder" />
+        </items>
+      </SplitPane>
    </children>
 </VBox>
