--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -3,6 +3,8 @@
     background-color: #383838; /* Used in the default.html file */
 }
 
+
+
 .label {
     -fx-font-size: 11pt;
     -fx-font-family: "Segoe UI Semibold";
@@ -39,6 +41,7 @@
     -fx-opacity: 1;
 }
 
+/*@@author*/
 /*@@author Juxarius*/
 .profile-header {
     -fx-font-size: 35pt;
@@ -61,7 +64,7 @@
     -fx-opacity: 1;
 }
 
-#insuranceProfilePanel .dynamic-labels {
+#insuranceProfilePanel .dynamic-labels, .valid-file, .missing-file {
     -fx-font-size: 15pt;
     -fx-font-family: "Segoe UI SemiLight";
     -fx-text-fill: white;
@@ -82,7 +85,7 @@
     -fx-opacity: 1;
 }
 
-#insuranceProfilePanel #owner:hover, #insuranceProfilePanel #insured:hover, #insuranceProfilePanel #beneficiary:hover {
+#insuranceProfilePanel #owner:hover, #insuranceProfilePanel #insured:hover, #insuranceProfilePanel #beneficiary:hover, .valid-file:hover {
     -fx-text-fill: #ff4500;
 }
 
@@ -123,6 +126,11 @@
 }
 /*@@author*/
 
+/*@@author RSJunior37*/
+.missing-file:hover {
+    -fx-text-fill: #696969
+}
+/*@@author*/
 .text-field {
     -fx-font-size: 12pt;
     -fx-font-family: "Segoe UI Semibold";
@@ -156,10 +164,10 @@
     -fx-border-width: 0 0 1 0;
     -fx-background-color: transparent;
     -fx-border-color:
-        transparent
-        transparent
-        derive(-fx-base, 80%)
-        transparent;
+            transparent
+            transparent
+            derive(-fx-base, 80%)
+            transparent;
     -fx-border-insets: 0 10 1 0;
 }
 
@@ -247,13 +255,13 @@
 }
 
 .anchor-pane {
-     -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: derive(#1d1d1d, 20%);
 }
 
 .pane-with-border {
-     -fx-background-color: derive(#1d1d1d, 20%);
-     -fx-border-color: derive(#1d1d1d, 10%);
-     -fx-border-top-width: 1px;
+    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-border-color: derive(#1d1d1d, 10%);
+    -fx-border-top-width: 1px;
 }
 
 .status-bar {
@@ -348,8 +356,8 @@
 }
 
 .button:pressed, .button:default:hover:pressed {
-  -fx-background-color: white;
-  -fx-text-fill: #1d1d1d;
+    -fx-background-color: white;
+    -fx-text-fill: #1d1d1d;
 }
 
 .button:focused {
