--- a/src/main/resources/view/WelcomeScreen.fxml
+++ b/src/main/resources/view/WelcomeScreen.fxml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
+<!-- @@author CT15 -->
 <?import javafx.scene.layout.*?>
-
-<?import javafx.scene.image.ImageView?>
 <?import javafx.geometry.Insets?>
+
 <VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:id="welcomeWindow">
     <padding>
         <Insets bottom="10.0" left="10.0" right ="10.0" top="10.0"/>
