--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -34,6 +34,7 @@
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
       <Label fx:id="bloodType" styleClass="cell_small_label" text="\$bloodType" />
       <Label fx:id="remark" styleClass="cell_small_label" text="\$remark" />
+      <Label fx:id="relation" styleClass="cell_small_label" text="\$relation" />
          <Label fx:id="appointment" styleClass="cell_small_label" text="\\$appointment" />
 
     </VBox>
