--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -45,7 +45,7 @@
          <StackPane fx:id="searchBoxPlaceholder" prefHeight="0.0" prefWidth="320.0" />
       <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS" />
     </VBox>
-    <StackPane fx:id="rightPanelPlaceholder" prefWidth="101.0">
+    <StackPane fx:id="middlePanelPlaceholder" prefWidth="101.0">
       <padding>
         <Insets bottom="10" left="10" right="10" top="10" />
       </padding>
