--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -154,14 +154,7 @@
      -fx-effect: dropshadow(gaussian, derive(#f7f5f4, -15%), 10, 0, 2, 2);
 }
 
-.result-text-area {
-    -fx-background-color: transparent;
-    -fx-font-family: "Segoe UI Light";
-    -fx-font-size: 16px;
-    -fx-text-fill: gray;
-}
-
-.person-detail-panel {
+.person-detail-pane {
     -fx-background-color: #ffffff;
     -fx-background-radius: 10 10 10 10;
     -fx-effect: dropshadow(gaussian, derive(#f7f5f4, -15%), 10, 0, 2, 2);
@@ -361,7 +354,11 @@
 }
 
 #resultDisplay {
-    -fx-prompt-text-fill: gray;
+    -fx-background-color: transparent;
+    -fx-font-family: "Segoe UI Light";
+    -fx-font-size: 16px;
+    -fx-text-fill: #746d75;
+    -fx-prompt-text-fill: #746d75;
 }
 
 #resultDisplay .content {
