remove unused import

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -365,7 +365,7 @@
 }
 
 #resultDisplay .content {
-    -fx-background-image: url("file:/D:/Git%20projects/addressbook4/docs/images/backgroundUp.jpg");
+    -fx-background-image: url("file:/Users/xuyiqing/Desktop/CS2103/addressbook-level4/docs/images/backgroundUp.jpg");
     -fx-background-radius: 0;
 }
 
