--- a/src/main/resources/view/BrightTheme.css
+++ b/src/main/resources/view/BrightTheme.css
@@ -325,6 +325,14 @@
     -fx-padding: 8 1 8 1;
 }
 
+.scroll-pane > .viewport {
+   -fx-background-color: transparent;
+}
+
+.scroll-pane {
+   -fx-background-color: transparent;
+}
+
 .contactsTab {
     -fx-background-color: #6495ed;
     -fx-background-radius: 10 0 0 0;
