--- a/src/main/resources/view/CommandModeStatusBarFooter.fxml
+++ b/src/main/resources/view/CommandModeStatusBarFooter.fxml
@@ -5,7 +5,7 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
+<!-- @@author tby1994 -->
 <HBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label text="Command Mode: " styleClass="label-bright">
