--- a/src/main/resources/view/BrightTheme.css
+++ b/src/main/resources/view/BrightTheme.css
@@ -324,7 +324,7 @@
 .scroll-bar:horizontal .increment-arrow, .scroll-bar:horizontal .decrement-arrow {
     -fx-padding: 8 1 8 1;
 }
-
+/* @@author huiyiiih*/
 .scroll-pane > .viewport {
    -fx-background-color: transparent;
 }
@@ -332,7 +332,7 @@
 .scroll-pane {
    -fx-background-color: transparent;
 }
-
+/* @@author */
 .contactsTab {
     -fx-background-color: #6495ed;
     -fx-background-radius: 10 0 0 0;
