Update DeleteByTagCommand and it's parser

--- a/src/main/resources/view/CalendarBox.fxml
+++ b/src/main/resources/view/CalendarBox.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.layout.Pane?>
 
-
+<!--@@author Haozhe321-->
 <Pane fx:id="calendarPane"
       maxHeight="-Infinity"
       maxWidth="-Infinity"
